# webos-settingsservice-conf

./: CMakeLists.txt  README.md  oss-pkg-info.yaml
files/default-settings/: countryGroupList.json  countryList.json  countryRegionList.json  defaultSettings.json  defaultTimeZone.json  description.bson  description.categorykeysmap.bson  description.categorykeysmap.json  description.json  description.map.bson  description.map.json  dimensionFormat.json  languageStyle.json  locale.json  settingsservice.conf
files/scripts/: convert.py  generates_ex.sh
files/settings/: fileCacheSchema.json  prefsFileWriterRule.json
